<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Financial Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="user_name">User Name </string>
    <string name="password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_account">New Account</string>
    <string name="view_accounts">Accounts</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="account_type">Account Type</string>
    <string name="account_balance">Account Balance</string>
    <string name="create">Create New Account</string>
    <string name="accountName">Account Name</string>
    <string name="title_activity_new_transaction">NewTransaction</string>
    <string name="transName">Transaction Name</string>
    <string name="transType">Transaction Type</string>
    <string name="transAmount">Transaction Amount</string>
    <string name="createTrans">Create Transaction</string>
    <string name="title_activity_reports">Reports</string>
    <string name="generate_report">generate report</string>
    <string name="Reportz">Reports</string>
    <string name="spending_report">Spending Report</string>
    <string name="title_activity_spending_report">SpendingReport</string>
    <string name="SCR">Spending Category Report for:</string>
    <string name="SR_ending_date">Pick a ending date:</string>
    <string name="next">Next</string>
    <string name="SR_starting_date">Pick a starting date:</string>
    <string name="title_activity_actual_spending_report">ActualSpendingReport</string>
    <string name="title_activity_starting_time">StartingTime</string>
    <string name="title_activity_ending_time">EndingTime</string>
    <string name="enterDate">MM/DD/YYYY</string>
    <string name="transDate">Transaction Date</string>
    <string name="S_return">Return Home</string>
    <string name="reports">Reports</string>
    <string name="passwordRules">Password must be at least 8 characters and 1 special character [0-9][!@#$%]</string>
    <string name="userNameRules">Username must be at least 5 characters</string>
    <string name="need_help_">Need Help?</string>
    <string name="title_activity_login_help">LoginHelp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forgotten_password">ForgottenPassword</string>
    <string name="title_activity_forgotten_user_name">ForgottenUserName</string>
    <string name="please_enter_your_email_">Please enter your email:</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="enter">Enter</string>
    <string name="_please_enter_your_email_">"            Please enter your email:"</string>
    <string name="please_enter_your_username_">Please enter your username:</string>
    <string name="username">username</string>
    <string name="checking_account">Checking Account</string>
    <string name="savings_account">Savings Account</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="transaction_history">Transaction History</string>
    <string name="new_transaction">New Transaction</string>
    <string name="transactionhistory">TransactionHistory</string>
    <string name="back_to_account_list">Back to Account List</string>
    <string name="transaction_type_">Transaction Type:</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="pick_a_starting_date_">Pick a starting date:</string>
    <string name="title_activity_income_source">IncomeSource</string>
    <string name="transaction_source">Transaction Source</string>
    <string name="title_activity_cash_flow">CashFlow</string>
    <string name="cash_flow_report_for_">Cash Flow Report for:</string>
    <string name="title_activity_account_listing">AccountListing</string>
    <string name="account_listing_report_for_">Account Listing Report for:</string>
    <string name="title_activity_choose_account">ChooseAccount</string>
    <string name="choose_an_account_">Choose an Account:</string>
    <string name="title_activity_transaction_history">TransactionHistory</string>
    <string name="transaction_history_report_for_">Transaction History Report for:</string>
    <string name="title_activity_music">Music</string>

</resources>
