<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003300"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/home_viewAccounts"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/home_accountList"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="287dp" >
            </ListView>

            <Button
                android:id="@+id/home_newAccount"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/new_account" />

            <Button
                android:id="@+id/home_genReport"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/reports" />
        </LinearLayout>
    </ScrollView>

    <CheckedTextView
        android:id="@+id/home_viewAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/view_accounts"
        android:textColor="#66FF00"
        android:textSize="30sp" />

</RelativeLayout>